# lambda-axum

./: AccountUser.json  Cargo.toml  Dockerfile  readme.md
src/: auth.rs  dynamo.rs  dynamo_query_helpers.rs  error.rs  item.rs  item_handlers.rs  main.rs  modyne.rs  user.rs  user_table.rs  user_table_handlers.rs
src/jwk/: configuration.rs  fetch_keys.rs  get_max_age.rs  jwk_auth.rs  mod.rs  use_repeating_job.rs  verifier.rs
