[package]
name = "cargo-lambda-axum"
version = "0.1.0"
edition = "2021"

[dependencies]

openssl = { version = "0.10.65", features = ["vendored"] }

lambda_http = "0.12.0"
tokio = { version = "1", features = ["macros"] }

# Added for axum
axum = "0.7"
lambda_runtime = "0.12.0"
serde = "1.0.196"
serde_json = "1.0"

# For auth
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
thiserror = "1.0.61"

aws-sdk-dynamodb = "1.38.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

aws-config = "1.5.4"
lambda_runtime_api_client = "0.11.1"

aws-smithy-runtime = { version = "1.0.1", features = ["test-util"] }
aws-smithy-types = { version = "1.0.1" }
base64 = "0.21.7"
anyhow = "1.0.86"
tokio-stream = "0.1.15"
modyne = "0.3.0"
time = "0.3.36"
aliri_braid = "0.4.0"
svix-ksuid = "0.8.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"



